fix: module legends color spacing and text spacing

--- a/src/client/components/Module/style.scss
+++ b/src/client/components/Module/style.scss
@@ -108,8 +108,7 @@
       width: 16px;
       height: 16px;
       display: inline-block;
-      margin-bottom: -2px;
-      margin-right: 5px;
+      margin-right: 8px;
       border-radius: 10px;
     }
   }
